--- a/style/style.css
+++ b/style/style.css
@@ -27,19 +27,19 @@
   margin: 0;
 }
 
-.frame {
+.calendar {
   max-width: 560px;
   margin: 20px auto;
 }
 
-.frame .week {
+.calendar .week {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   height: 80px;
 }
 
-.frame .day {
+.calendar .week .day {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
