--- a/style/style.scss
+++ b/style/style.scss
@@ -28,7 +28,7 @@ $primary-color: #4abf8a;
     display: flex;
     height: 80px;
 
-    .day {
+    .cell {
       flex-grow: 1;
       flex-shrink: 1;
       flex-basis: 0;
