--- a/style/style.css
+++ b/style/style.css
@@ -1,45 +1,39 @@
-.ccontainer {
+.calendar {
+  max-width: 400px;
+  margin: 20px auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  width: 200px;
-  background-color: #4abf8a;
-  color: #fff;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 4px 4px 0 rgba(50, 50, 50, 0.4);
-          box-shadow: 0 4px 4px 0 rgba(50, 50, 50, 0.4);
-}
-
-.ccontainer > div {
-  font-family: Verdana, Arial, sans-serif;
-  padding: 5px 5px;
-  margin: 0;
-}
-
-.calendar {
-  max-width: 560px;
-  margin: 20px auto;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
 }
 
 .calendar .week {
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 80px;
 }
 
 .calendar .week .cell {
+  height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -49,7 +43,6 @@
       flex-basis: 0;
   color: #4abf8a;
   padding: 5px;
-  background-color: rgba(255, 255, 255, 0.7);
   -webkit-box-shadow: -1px -1px #4abf8a, inset -1px -1px 0 0 #4abf8a;
           box-shadow: -1px -1px #4abf8a, inset -1px -1px 0 0 #4abf8a;
 }
