added click event

--- a/style/style.scss
+++ b/style/style.scss
@@ -27,9 +27,11 @@ $primary-color: #4abf8a;
       padding: 5px;
       //sbackground-color: transparentize(white, 0.3);
       box-shadow: -1px -1px $primary-color, inset -1px -1px 0 0 $primary-color;
+      z-index: 1;
     }
 
     &.header {
+      z-index: 0;
       position: fixed;
       top: 20px;
       width: 400px;
