--- a/style/style.css
+++ b/style/style.css
@@ -47,9 +47,11 @@
   padding: 5px;
   -webkit-box-shadow: -1px -1px #4abf8a, inset -1px -1px 0 0 #4abf8a;
           box-shadow: -1px -1px #4abf8a, inset -1px -1px 0 0 #4abf8a;
+  z-index: 1;
 }
 
 .calendar .week.header {
+  z-index: 0;
   position: fixed;
   top: 20px;
   width: 400px;
