--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,34 @@
-.calendar {
+/* max-height - the only parameter in this file that needs to be edited.
+ * Change it to suit your needs. The rest is recommended to leave as is.
+ */
+.clusterize-scroll {
+  max-height: 80 vh;
+  overflow: auto;
+}
+
+/**
+ * Avoid vertical margins for extra tags
+ * Necessary for correct calculations when rows have nonzero vertical margins
+ */
+.clusterize-extra-row {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
+
+/* By default extra tag .clusterize-keep-parity added to keep parity of rows.
+ * Useful when used :nth-child(even/odd)
+ */
+.clusterize-extra-row.clusterize-keep-parity {
+  display: none;
+}
+
+/* During initialization clusterize adds tabindex to force the browser to keep focus
+ * on the scrolling list, see issue #11
+ * Outline removes default browser's borders for focused elements.
+ */
+.clusterize-content {
+  outline: 0;
+  counter-reset: clusterize-counter;
   max-width: 60vw;
   margin: 70px auto;
   display: -webkit-box;
@@ -14,14 +44,14 @@
   text-align: center;
 }
 
-.calendar .week {
+.clusterize-content .week {
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.calendar .week .cell {
+.clusterize-content .week .cell {
   height: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -50,57 +80,11 @@
   z-index: 0;
 }
 
-.calendar .week.header {
+.clusterize-content .week.header {
   z-index: 0;
   position: fixed;
   top: 20px;
   width: 60vw;
-}
-
-/* max-height - the only parameter in this file that needs to be edited.
- * Change it to suit your needs. The rest is recommended to leave as is.
- */
-.clusterize-scroll {
-  max-height: 200px;
-  overflow: auto;
-  max-width: 60vw;
-  margin: 70px auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  text-align: center;
-}
-
-/**
- * Avoid vertical margins for extra tags
- * Necessary for correct calculations when rows have nonzero vertical margins
- */
-.clusterize-extra-row {
-  margin-top: 0 !important;
-  margin-bottom: 0 !important;
-}
-
-/* By default extra tag .clusterize-keep-parity added to keep parity of rows.
- * Useful when used :nth-child(even/odd)
- */
-.clusterize-extra-row.clusterize-keep-parity {
-  display: none;
-}
-
-/* During initialization clusterize adds tabindex to force the browser to keep focus
- * on the scrolling list, see issue #11
- * Outline removes default browser's borders for focused elements.
- */
-.clusterize-content {
-  outline: 0;
-  counter-reset: clusterize-counter;
 }
 
 /* Centering message that appears when no data provided
