--- a/style/style.scss
+++ b/style/style.scss
@@ -62,6 +62,11 @@ $main-width: 60vw;
       z-index: 0;
     }
 
+    .odd {
+      background: $primary-color;
+      color: #fff;
+    }
+
     &.header {
       z-index: 0;
       position: fixed;
